Module manager test methods passing